--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+version: '3.9'
 
 x-common: &common
   env_file: .env
@@ -6,7 +6,7 @@ x-common: &common
   networks:
     - alert-bridge
   healthcheck:
-    test: ["CMD", "wget", "--spider", "http://localhost:3000/health"]
+    test: ['CMD', 'wget', '--spider', 'http://localhost:3000/health']
     interval: 30s
     timeout: 10s
     retries: 3
@@ -25,7 +25,7 @@ services:
       dockerfile: Dockerfile
     container_name: alertbridge-prod
     ports:
-      - "${PORT:-3000}:3000"
+      - '${PORT:-3000}:3000'
     profiles:
       - prod
 
@@ -35,7 +35,7 @@ services:
     container_name: alertbridge-dev
     working_dir: /app
     ports:
-      - "${PORT:-3000}:3000"
+      - '${PORT:-3000}:3000'
     volumes:
       - .:/app
       - node_modules:/app/node_modules
