--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "prepare": "husky"
   },
   "keywords": [
     "sentry",
@@ -28,9 +29,23 @@
     "pino": "^8.12.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
+    "@types/eslint__eslintrc": "^2.1.2",
     "@types/node": "^20.4.0",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
+    "globals": "^16.4.0",
+    "husky": "^9.1.7",
+    "jiti": "^2.6.1",
+    "lint-staged": "^16.2.4",
     "pino-pretty": "^13.1.2",
+    "prettier": "3.6.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.6"
+    "typescript": "^5.5.6",
+    "typescript-eslint": "^8.46.1"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown",
+    "**.ts": "eslint --fix"
   }
 }
